fix some refine